--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -1,5 +1,15 @@
 .Topcontainer
 {
-    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 300px;
+    
     background-color: rgb(0, 0, 0);
 }   
+
+.Topcontainer left
+ {
+    display: flex;
+    align-items: center;
+}
