--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 300px;
-    
+    margin: 0px;
     background-color: rgb(0, 0, 0);
 }   
 
@@ -12,4 +12,14 @@
  {
     display: flex;
     align-items: center;
+}
+
+.CorpLogo {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    width: 80px;
+    height: 70px;
 }
