--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -14,6 +14,7 @@
     align-items: center;
 }
 
+
 .CorpLogo {
     display: flex;
     align-items: center;
@@ -22,4 +23,29 @@
 .logo {
     width: 80px;
     height: 70px;
+}
+
+.logocontainer {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+.logo_text {
+    font-size: 30px;
+    margin-left: 16px;
+    letter-spacing: 2px;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+body
+{
+    margin: 0px;
+    padding: 0px;
+    background-color: rgb(0, 0, 0);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
