--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -62,3 +62,18 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+
+.Contactcontainer
+{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    margin: 0px;
+    background-color: rgb(0, 0, 0);
+ width: 50%;
+    color: rgb(255, 255, 255);
+    padding-left: 10%;
+    padding-top: 5%;
+}
+
