--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -71,9 +71,22 @@ a {
     justify-content: space-between;
     margin: 0px;
     background-color: rgb(0, 0, 0);
- width: 50%;
+ width: 25%;
     color: rgb(255, 255, 255);
     padding-left: 10%;
     padding-top: 5%;
+    height: 100%;
+}
+
+.contactbackground {
+    width: 100%;
+    height: auto;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    overflow: hidden;
+    height: 100%;
 }
 
