--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -71,7 +71,7 @@ a {
     justify-content: space-between;
     margin: 0px;
     background-color: rgb(0, 0, 0);
- width: 25%;
+ width: 40%;
     color: rgb(255, 255, 255);
     padding-left: 10%;
     padding-top: 5%;
@@ -90,3 +90,17 @@ a {
     height: 100%;
 }
 
+.ContactInfotop {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.ContactInfobottom {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+}
