--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -121,3 +121,19 @@ a {
     left: 50px;
 }
 
+.NewsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.NewsContain{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: white;
+}
