--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -43,6 +43,7 @@ body
     margin: 0px;
     padding: 0px;
     background-color: rgb(0, 0, 0);
+    height: 100%;
 }
 
 a {
@@ -61,6 +62,12 @@ a {
     letter-spacing: 2px;
     color: #ffffff;
     text-decoration: none;
+    padding: 8px 16px;
+}
+
+.Topnav a:hover {
+    color: #ffffff;
+    border: #505050 1px solid;
 }
 
 .Contactcontainer {
@@ -122,18 +129,47 @@ a {
 }
 
 .NewsContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     
+    flex-direction: column;
+    align-items: left;
+    
+        margin-top: 70px;
+    display: flex;
+    justify-content: left;
+    padding: 20px 20px;
+    margin-bottom: 170px;
+    background-color: #fff; 
+    max-width: 50%; 
+    margin-left: auto; 
+    margin-right: auto; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    height: 100%;
 }
 
 .NewsContain{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: center;
     gap: 10px;
+    color: white;
+}
+
+.Newsbackground {
+   display: flex;
+   justify-content: right;
+   
+}
+
+.Newsbackground img {
+    position: absolute;
+    top:120px;
+    right: 200px
+}
+
+.Newsbackground h2{
+    position: absolute;
+    top: 600px;
+    right: 400px;
     color: white;
 }
