--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -179,3 +179,20 @@ a {
     color: white;
 }
 
+.GameContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+    justify-content: center;
+    gap: 10px;
+    color: white;
+    margin-top: 50px;
+    padding: 20px 20px;
+    margin-bottom: 170px;
+    background-color: #fff; 
+    max-width: 50%; 
+    margin-left: auto; 
+    margin-right: auto; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    height: 75%;
+}
