--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -152,6 +152,7 @@ a {
 }
 
 .NewsContain{
+
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -184,7 +185,7 @@ a {
     flex-direction: row;
     align-items: left;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     color: white;
     margin-top: 50px;
     padding: 20px 20px;
@@ -195,4 +196,21 @@ a {
     margin-right: auto; 
     background-color: rgba(0, 0, 0, 0.5); 
     height: 75%;
+}
+
+.game{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: white;
+
+}
+
+.game img {
+    width: 300px;
+    height: 300px;
+    
+    object-fit: cover;
 }
