--- a/Webfile/Webfile.css
+++ b/Webfile/Webfile.css
@@ -185,7 +185,7 @@ a {
     flex-direction: row;
     align-items: left;
     justify-content: center;
-    gap: 20px;
+    gap: 100px;
     color: white;
     margin-top: 50px;
     padding: 20px 20px;
@@ -210,6 +210,31 @@ a {
 
 .game img {
     width: 300px;
+    height: 300px;
+    
+    object-fit: cover;
+}
+
+.GtaContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    gap: 10px;
+    color: white;
+    margin-top: 50px;
+    padding: 20px 20px;
+    margin-bottom: 170px;
+    background-color: #fff; 
+    max-width: 50%; 
+    margin-left: auto; 
+    margin-right: auto; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    height: 75%;
+}
+
+.GtaContainer img{
+    width: 400px;
     height: 300px;
     
     object-fit: cover;
